--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 RewriteCond %{HTTPS} on
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+RewriteRule (.*) https://%{HTTPS_HOST}%{REQUEST_URI} [R=301,L]
